# uTensor-image-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
image_tools/: Interpolation.hpp  SlicedImage.hpp
images/: 7.txt  resize.sh
scripts/: split_and_run.ipynb
